added basic js funcionality

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <script src="js/jquery-1.4.2.js"></script>
+    <script src="js/jquery/jquery-1.4.2.js"></script>
+    <script src="js/payment-methods.js"></script>
 
     <link rel="stylesheet" href="css/payment-methods.css">
 
