--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         Credit Card
       </label>
       <fieldset id="fields_for_credit_card" class="hidden">
+        <label for="name">Name</label><input type="text" name="name" id="name"/>
+        <label for="number">Number</label><input type="text" name="number" id="number"/>
       </fieldset>
       <!--
       <fieldset id="fields_for_boleto">
