ok, looking good, gonna try moving the extra fieldset

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <input type="text" name="cvv" id="cvv"/>
 
         <fieldset id="fields_for_expiration_date">
+          <legend>Expiration</legend>
+
           <label for="expiradion_month">Month</label>
           <input type="text" name="expiration_month" id="expiration_month"/>
 
