--- a/js/specs/suite.html
+++ b/js/specs/suite.html
@@ -6,11 +6,7 @@
     <script src="support/jquery/jquery.print.js"></script>
 
     <!-- screw-unit-js -->
-    <!--<script src="support/screw-unit/js/screw.all.js"></script>-->
-    <script src="support/screw-unit/js/screw.builder.js"></script>
-    <script src="support/screw-unit/js/screw.matchers.js"></script>
-    <script src="support/screw-unit/js/screw.events.js"></script>
-    <script src="support/screw-unit/js/screw.behaviors.js"></script>
+    <script src="support/screw-unit/js/screw.all.js"></script>
     
     <!-- spec helper -->
     <script src="spec_helper.js"></script>
