--- a/js/specs/suite.html
+++ b/js/specs/suite.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="support/screw-unit/css/screw.css">
 
     <script src="../payment-methods.js"></script>
+
+    <script src="payment-methods/helpers_spec.js"></script>
     <script src="payment-methods/matchers_spec.js"></script>
   </head>
   <body>
