added screw.js files | major revamp of screw.unit css

--- a/js/specs/suite.html
+++ b/js/specs/suite.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Specs for payment-methods.js</title>
+
     <!-- jquery -->
     <script src="support/jquery/jquery-1.4.2.js"></script>
     <script src="support/jquery/jquery.fn.js"></script>
@@ -7,6 +10,9 @@
 
     <!-- screw-unit-js -->
     <script src="support/screw-unit/js/screw.all.js"></script>
+
+    <!-- smoke-js -->
+    <script src="support/smoke/smoke.all.js"></script>
     
     <!-- spec helper -->
     <script src="spec_helper.js"></script>
