added specs for 'error', it includes mocks

--- a/js/specs/suite.html
+++ b/js/specs/suite.html
@@ -24,6 +24,7 @@
 
     <script src="payment-methods/helpers_spec.js"></script>
     <script src="payment-methods/matchers_spec.js"></script>
+    <script src="payment-methods/error_spec.js"></script>
   </head>
   <body>
   </body>
