--- a/js/specs/suite.html
+++ b/js/specs/suite.html
@@ -25,6 +25,7 @@
     <script src="payment-methods/helpers_spec.js"></script>
     <script src="payment-methods/matchers_spec.js"></script>
     <script src="payment-methods/error_spec.js"></script>
+    <script src="payment-methods/errors_spec.js"></script>
   </head>
   <body>
   </body>
